# medreason-graph

./: .gitignore  Makefile  README.md  ROADMAP.md  pyproject.toml
config/: default_clinical_config.json
evaluation/: retrieval_cases.json
examples/cases/: chest_pain.json  chest_pain_real_demo.json  dyspnea_real_demo.json
examples/corpus/: acute_chest_pain_guideline.md
examples/golden/: chest_pain_summary.json
examples/graph_exports/: README.md
scripts/: generate_real_outputs.py  openai_claim_extractor.py
sources/: open_medical_sources.json
src/medreason_graph/: __init__.py  analyzer.py  api.py  cli.py  config.py  embeddings.py  evaluation.py  evidence.py  faiss_retrieval.py  graph.py  graph_store.py  ingestion.py  lexicon.py  logging_utils.py  models.py  noise.py  query.py  reporter.py  retrieval.py  retrieval_backend.py  retrieval_scoring.py  source_downloader.py  sqlite_retrieval.py  storage.py  terminology.py  text.py  verifier.py
tests/: test_analysis.py  test_config_and_exports.py  test_embeddings.py  test_faiss_retrieval.py  test_graph_store.py  test_ingestion_retrieval.py  test_real_corpus_ingestion.py  test_source_downloader.py  test_sqlite_retrieval.py  test_terminology.py
